Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Go/DriverExamples/wrappers/AstroFuncDll.h

// Converts right ascension and declination to vector triad LAD in topocentric equatorial coordinate system.
void RADecToLAD(double ra, double dec, double l[3], double a_tilde[3], double d_tilde[3]);
// Converts azimuth and elevation to vector triad LAD in topocentric horizontal coordinate system.
void AzElToLAD(double az, double el, double lh[3], double ah[3], double dh[3]);
// Converts satellite ECI position/velocity vectors and sensor location to topocentric components.
// The xa_topo array has the following structure:
// [0]: Resulting right ascension (RA) (deg)
// [1]: Declination (deg)
// [2]: Azimuth (deg)
// [3]: Elevation (deg)
// [4]: Range (km)
// [5]: RAdot (first derivative of right ascension) (deg/s)
// [6]: DecDot (first derivative of declination) (deg/s)
// [7]: AzDot (first derivative of azimuth) (deg/s)
// [8]: ElDot (first derivative of elevation) (deg/s)
// [9]: RangeDot (first derivative of range) (km/s)   
void ECIToTopoComps(double theta, double lat, double senPos[3], double satPos[3], double satVel[3], double xa_topo[10]);
// Converts right ascension and declination in the topocentric reference frame to Azimuth/Elevation in the local horizon reference frame.
void RaDecToAzEl(double thetaG, double lat, double lon, double ra, double dec, double* az, double* el);
// Converts right ascension and declination in the topocentric reference frame to Azimuth/Elevation in the local horizon reference frame.
void RaDecToAzElTime(double ds50UTC, double lat, double lon, double ra, double dec, double* az, double* el);
// Converts Azimuth/Elevation in the local horizon reference frame to Right ascension/Declination in the topocentric reference frame
void AzElToRaDec(double thetaG, double lat, double lon, double az, double el, double* ra, double* dec);
// Converts Azimuth/Elevation in the local horizon reference frame to Right ascension/Declination in the topocentric reference frame
void AzElToRaDecTime(double ds50UTC, double lat, double lon, double az, double el, double* ra, double* dec);
// Converts full state RAE (range, az, el, and their rates) to full state ECI (position and velocity)
// The xa_rae array has the following structure:
// [0]: Range (km)
// [1]: Azimuth (deg)
// [2]: Elevation (deg)
// [3]: Range Dot (km/s)
// [4]: Azimuth Dot (deg/s)
// [5]: Elevation Dot (deg/s)
void RAEToECI(double theta, double astroLat, double xa_rae[6], double senPos[3], double satPos[3], double satVel[3]);
// Computes initial values for the SGP drag term nDot and the SGP4 drag term BSTAR based upon eccentricity and semi-major axis.
void GetInitialDrag(double semiMajorAxis, double eccen, double* nDot, double* bstar);
// Converts covariance matrix PTW to UVW.
// PTW = P: TxW, T: along velocity direction, W: pos x vel.
// UVW = U: radial direction, V: in plane, perpendicular to U, W: pos x vel.
void CovMtxPTWToUVW(double pos[3], double vel[3], double ptwCovMtx[6][6], double uvwCovMtx[6][6]);
// Converts covariance matrix UVW to PTW.
// PTW = P: TxW, T: along velocity direction, W: pos x vel.
// UVW = U: radial direction, V: in plane, perpendicular to U, W: pos x vel.
void CovMtxUVWToPTW(double pos[3], double vel[3], double uvwCovMtx[6][6], double ptwCovMtx[6][6]);
// Computes Earth/Sensor/Earth Limb and Earth/Sensor/Satellite angles.
void EarthObstructionAngles(double earthLimb, double satECI[3], double senECI[3], double* earthSenLimb, double* earthSenSat, double* satEarthSen);
// Determines if a point in space is sunlit at the input time ds50ET
int IsPointSunlit(double ds50ET, double ptEci[3]);
// Rotates Right Ascension and Declination to specified epoch
void RotRADecl(int nutationTerms, int dir, double ds50UTCIn, double raIn, double declIn, double ds50UTCOut, double* raOut, double* declOut);
// Rotates Right Ascension and Declination from TEME of Date to MEME of the specified year of equinox
int RotRADec_DateToEqnx(int nutationTerms, int yrOfEqnx, double ds50UTCIn, double raIn, double declIn, double* raOut, double* declOut);
// Rotates Right Ascension and Declination from MEME of the specified year of equinox to TEME of Date
int RotRADec_EqnxToDate(int nutationTerms, int yrOfEqnx, double ds50UTCIn, double raIn, double declIn, double* raOut, double* declOut);
// Rotates the Equinoctial covariance to UVW
// Note: This method uses the global Earth constants so make sure that you select the right Earth model by calling the EnvConst/EnvSetGeoIdx method
// The n terms must be normalized by n
// The input position, velocity and covariance must all have the same reference equator and equinox.
void CovMtxEqnxToUVW(double pos[3], double vel[3], double covMtxEqnx[6][6], double covMtxUVW[6][6]);
// Rotates the UVW covariance to Equinoctial
// Note: This method uses the global Earth constants so make sure that you select the right Earth model by calling the EnvConst/EnvSetGeoIdx method
// The n terms are normalized by n
// The input position, velocity reference equator and equinox determine the output covariance reference frame.
void CovMtxUVWToEqnx(double pos[3], double vel[3], double covMtxUVW[6][6], double covMtxEqnx[6][6]);
// Rotates the ECI covariance to UVW
// Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
void CovMtxECIToUVW(double pos[3], double vel[3], double covMtxECI[6][6], double covMtxUVW[6][6]);
// Rotates the UVW covariance to ECI
// Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
void CovMtxUVWToECI(double pos[3], double vel[3], double covMtxUVW[6][6], double covMtxECI[6][6]);