Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Julia/wrappers/AstroFuncDll.jl


#############################################################################
# Converts right ascension and declination to vector triad LAD in topocentric equatorial coordinate system.
function RADecToLAD(ra, dec)
   l = zeros(Float64, 3)
   a_tilde = zeros(Float64, 3)
   d_tilde = zeros(Float64, 3)
   ccall( (:RADecToLAD,libname) 
     , Nothing
     , (Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , ra,dec,l,a_tilde,d_tilde)
   return l, a_tilde, d_tilde
end

#############################################################################
# Converts azimuth and elevation to vector triad LAD in topocentric horizontal coordinate system.
function AzElToLAD(az, el)
   lh = zeros(Float64, 3)
   ah = zeros(Float64, 3)
   dh = zeros(Float64, 3)
   ccall( (:AzElToLAD,libname) 
     , Nothing
     , (Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , az,el,lh,ah,dh)
   return lh, ah, dh
end

#############################################################################
# Converts satellite ECI position/velocity vectors and sensor location to topocentric components.
# The xa_topo array has the following structure:
# [0]: Resulting right ascension (RA) (deg)
# [1]: Declination (deg)
# [2]: Azimuth (deg)
# [3]: Elevation (deg)
# [4]: Range (km)
# [5]: RAdot (first derivative of right ascension) (deg/s)
# [6]: DecDot (first derivative of declination) (deg/s)
# [7]: AzDot (first derivative of azimuth) (deg/s)
# [8]: ElDot (first derivative of elevation) (deg/s)
# [9]: RangeDot (first derivative of range) (km/s)   
function ECIToTopoComps(theta, lat, senPos, satPos, satVel)
   xa_topo = zeros(Float64, 10)
   ccall( (:ECIToTopoComps,libname) 
     , Nothing
     , (Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , theta,lat,senPos,satPos,satVel,xa_topo)
   return xa_topo
end

#############################################################################
# Converts right ascension and declination in the topocentric reference frame to Azimuth/Elevation in the local horizon reference frame.
function RaDecToAzEl(thetaG, lat, lon, ra, dec)
   az = zeros(Float64, 1)
   el = zeros(Float64, 1)
   ccall( (:RaDecToAzEl,libname) 
     , Nothing
     , (Float64
     , Float64
     , Float64
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64})
     , thetaG,lat,lon,ra,dec,az,el)
   return az[1], el[1]
end

#############################################################################
# Converts right ascension and declination in the topocentric reference frame to Azimuth/Elevation in the local horizon reference frame.
function RaDecToAzElTime(ds50UTC, lat, lon, ra, dec)
   az = zeros(Float64, 1)
   el = zeros(Float64, 1)
   ccall( (:RaDecToAzElTime,libname) 
     , Nothing
     , (Float64
     , Float64
     , Float64
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,lat,lon,ra,dec,az,el)
   return az[1], el[1]
end

#############################################################################
# Converts Azimuth/Elevation in the local horizon reference frame to Right ascension/Declination in the topocentric reference frame
function AzElToRaDec(thetaG, lat, lon, az, el)
   ra = zeros(Float64, 1)
   dec = zeros(Float64, 1)
   ccall( (:AzElToRaDec,libname) 
     , Nothing
     , (Float64
     , Float64
     , Float64
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64})
     , thetaG,lat,lon,az,el,ra,dec)
   return ra[1], dec[1]
end

#############################################################################
# Converts Azimuth/Elevation in the local horizon reference frame to Right ascension/Declination in the topocentric reference frame
function AzElToRaDecTime(ds50UTC, lat, lon, az, el)
   ra = zeros(Float64, 1)
   dec = zeros(Float64, 1)
   ccall( (:AzElToRaDecTime,libname) 
     , Nothing
     , (Float64
     , Float64
     , Float64
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,lat,lon,az,el,ra,dec)
   return ra[1], dec[1]
end

#############################################################################
# Converts full state RAE (range, az, el, and their rates) to full state ECI (position and velocity)
# The xa_rae array has the following structure:
# [0]: Range (km)
# [1]: Azimuth (deg)
# [2]: Elevation (deg)
# [3]: Range Dot (km/s)
# [4]: Azimuth Dot (deg/s)
# [5]: Elevation Dot (deg/s)
function RAEToECI(theta, astroLat, xa_rae, senPos)
   satPos = zeros(Float64, 3)
   satVel = zeros(Float64, 3)
   ccall( (:RAEToECI,libname) 
     , Nothing
     , (Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , theta,astroLat,xa_rae,senPos,satPos,satVel)
   return satPos, satVel
end

#############################################################################
# Computes initial values for the SGP drag term nDot and the SGP4 drag term BSTAR based upon eccentricity and semi-major axis.
function GetInitialDrag(semiMajorAxis, eccen)
   nDot = zeros(Float64, 1)
   bstar = zeros(Float64, 1)
   ccall( (:GetInitialDrag,libname) 
     , Nothing
     , (Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64})
     , semiMajorAxis,eccen,nDot,bstar)
   return nDot[1], bstar[1]
end

#############################################################################
# Converts covariance matrix PTW to UVW.
# PTW = P: TxW, T: along velocity direction, W: pos x vel.
# UVW = U: radial direction, V: in plane, perpendicular to U, W: pos x vel.
function CovMtxPTWToUVW(pos, vel, ptwCovMtx)
   uvwCovMtx = zeros(Float64, 6, 6)
   ccall( (:CovMtxPTWToUVW,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,ptwCovMtx,uvwCovMtx)
   return uvwCovMtx
end

#############################################################################
# Converts covariance matrix UVW to PTW.
# PTW = P: TxW, T: along velocity direction, W: pos x vel.
# UVW = U: radial direction, V: in plane, perpendicular to U, W: pos x vel.
function CovMtxUVWToPTW(pos, vel, uvwCovMtx)
   ptwCovMtx = zeros(Float64, 6, 6)
   ccall( (:CovMtxUVWToPTW,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,uvwCovMtx,ptwCovMtx)
   return ptwCovMtx
end

#############################################################################
# Computes Earth/Sensor/Earth Limb and Earth/Sensor/Satellite angles.
function EarthObstructionAngles(earthLimb, satECI, senECI)
   earthSenLimb = zeros(Float64, 1)
   earthSenSat = zeros(Float64, 1)
   satEarthSen = zeros(Float64, 1)
   ccall( (:EarthObstructionAngles,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , earthLimb,satECI,senECI,earthSenLimb,earthSenSat,satEarthSen)
   return earthSenLimb[1], earthSenSat[1], satEarthSen[1]
end

#############################################################################
# Determines if a point in space is sunlit at the input time ds50ET
function IsPointSunlit(ds50ET, ptEci)
   yesNo = ccall( (:IsPointSunlit,libname) 
     , Int32
     , (Float64
     , Ref{Float64})
     , ds50ET,ptEci)
   return yesNo
end

#############################################################################
# Rotates Right Ascension and Declination to specified epoch
function RotRADecl(nutationTerms, dir, ds50UTCIn, raIn, declIn, ds50UTCOut)
   raOut = zeros(Float64, 1)
   declOut = zeros(Float64, 1)
   ccall( (:RotRADecl,libname) 
     , Nothing
     , (Int32
     , Int32
     , Float64
     , Float64
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64})
     , nutationTerms,dir,ds50UTCIn,raIn,declIn,ds50UTCOut,raOut,declOut)
   return raOut[1], declOut[1]
end

#############################################################################
# Rotates Right Ascension and Declination from TEME of Date to MEME of the specified year of equinox
function RotRADec_DateToEqnx(nutationTerms, yrOfEqnx, ds50UTCIn, raIn, declIn)
   raOut = zeros(Float64, 1)
   declOut = zeros(Float64, 1)
   errCode = ccall( (:RotRADec_DateToEqnx,libname) 
     , Int32
     , (Int32
     , Int32
     , Float64
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64})
     , nutationTerms,yrOfEqnx,ds50UTCIn,raIn,declIn,raOut,declOut)
   return errCode, raOut[1], declOut[1]
end

#############################################################################
# Rotates Right Ascension and Declination from MEME of the specified year of equinox to TEME of Date
function RotRADec_EqnxToDate(nutationTerms, yrOfEqnx, ds50UTCIn, raIn, declIn)
   raOut = zeros(Float64, 1)
   declOut = zeros(Float64, 1)
   errCode = ccall( (:RotRADec_EqnxToDate,libname) 
     , Int32
     , (Int32
     , Int32
     , Float64
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64})
     , nutationTerms,yrOfEqnx,ds50UTCIn,raIn,declIn,raOut,declOut)
   return errCode, raOut[1], declOut[1]
end

#############################################################################
# Rotates the Equinoctial covariance to UVW
# Note: This method uses the global Earth constants so make sure that you select the right Earth model by calling the EnvConst/EnvSetGeoIdx method
# The n terms must be normalized by n
# The input position, velocity and covariance must all have the same reference equator and equinox.
function CovMtxEqnxToUVW(pos, vel, covMtxEqnx)
   covMtxUVW = zeros(Float64, 6, 6)
   ccall( (:CovMtxEqnxToUVW,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,covMtxEqnx,covMtxUVW)
   return covMtxUVW
end

#############################################################################
# Rotates the UVW covariance to Equinoctial
# Note: This method uses the global Earth constants so make sure that you select the right Earth model by calling the EnvConst/EnvSetGeoIdx method
# The n terms are normalized by n
# The input position, velocity reference equator and equinox determine the output covariance reference frame.
function CovMtxUVWToEqnx(pos, vel, covMtxUVW)
   covMtxEqnx = zeros(Float64, 6, 6)
   ccall( (:CovMtxUVWToEqnx,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,covMtxUVW,covMtxEqnx)
   return covMtxEqnx
end

#############################################################################
# Rotates the ECI covariance to UVW
# Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
function CovMtxECIToUVW(pos, vel, covMtxECI)
   covMtxUVW = zeros(Float64, 6, 6)
   ccall( (:CovMtxECIToUVW,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,covMtxECI,covMtxUVW)
   return covMtxUVW
end

#############################################################################
# Rotates the UVW covariance to ECI
# Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
function CovMtxUVWToECI(pos, vel, covMtxUVW)
   covMtxECI = zeros(Float64, 6, 6)
   ccall( (:CovMtxUVWToECI,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,covMtxUVW,covMtxECI)
   return covMtxECI
end
